fix button mobile

--- a/src/components/Price/Price.module.css
+++ b/src/components/Price/Price.module.css
@@ -108,5 +108,6 @@
 @media (max-width: 575px) {
     .button {
         width: 100%;
+        text-align: center;
     }
 }
